--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,35 @@ tags
 /mruby-source-*.gem
 doc/api
 .yardoc
+build_config.rb.x
+examples/hello_wruby/README.md
+examples/hello_wruby/a.out
+examples/hello_wruby/hello_ruby.c
+examples/hello_wruby/hello_ruby.full.asm.js
+examples/hello_wruby/hello_ruby.full.wasm.mem
+examples/hello_wruby/hello_ruby.html
+examples/hello_wruby/hello_ruby.js
+examples/hello_wruby/hello_ruby.mrb
+examples/hello_wruby/hello_ruby.rb
+examples/hello_wruby/hello_ruby.wasm
+examples/hello_wruby/hello_ruby.wasm.mem
+examples/hello_wruby/hello_ruby.wast
+examples/hello_wruby/mruby
+examples/hello_wruby/mruby2/
+examples/hello_wruby/program.c
+examples/hello_wruby/program.callTree
+examples/hello_wruby/program.js.symbols
+examples/hello_wruby/program.min.js
+examples/hello_wruby/program.min.wasm
+examples/hello_wruby/program.mrb
+examples/hello_wruby/program.rb
+examples/hello_wruby/program.s
+examples/hello_wruby/program.stats
+examples/hello_wruby/program.wasm.map
+examples/hello_wruby/program.wast
+examples/hello_wruby/t.js
+examples/hello_wruby/test.c
+examples/hello_wruby/wasmx
+libmruby.a
+mruby-cli/
+test-mruby-wasm/
